--- a/02_Arvore_Genealogica/thread/view/main_view.fxml
+++ b/02_Arvore_Genealogica/thread/view/main_view.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="632.0" prefWidth="1117.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <ImageView fitHeight="727.0" fitWidth="1231.0" layoutX="-58.0" layoutY="-55.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="727.0" fitWidth="1212.0" layoutX="-58.0" layoutY="-55.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/castle.jpg" />
          </image>
@@ -49,7 +49,7 @@
             <Image url="@../img/neto2.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="738.0" layoutY="-19.0" prefHeight="656.0" prefWidth="446.0" style="-fx-background-color: WHITE;">
+      <AnchorPane layoutX="738.0" layoutY="-19.0" prefHeight="674.0" prefWidth="459.0" style="-fx-background-color: D4AF37;">
          <children>
             <Label layoutX="14.0" layoutY="27.0" prefHeight="25.0" prefWidth="59.0" text="Pai">
                <font>
