--- a/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
+++ b/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <AnchorPane fx:id="anchorPaneManagement" layoutX="361.0" layoutY="150.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: WHITE;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="anchorPaneManagement" layoutX="361.0" layoutY="150.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: WHITE;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fitHeight="700.0" fitWidth="1726.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -37,14 +37,79 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorPaneProducers" prefHeight="700.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <AnchorPane prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <AnchorPane fx:id="anchorPaneProducers" prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView fitHeight="807.0" fitWidth="1557.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/producers/background.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgRefinery1" fitHeight="150.0" fitWidth="200.0" layoutX="135.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/producers/refinery.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgRefinery2" fitHeight="150.0" fitWidth="200.0" layoutX="388.0" layoutY="329.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/producers/refinery.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgRefinery3" fitHeight="150.0" fitWidth="200.0" layoutX="684.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/producers/refinery.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgRefinery4" fitHeight="150.0" fitWidth="200.0" layoutX="965.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/producers/refinery.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProdToManagment" fitHeight="110.0" fitWidth="110.0" layoutX="1069.0" layoutY="576.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/managment.png" />
+               </image>
+            </ImageView>
+         </children></AnchorPane>
+      <AnchorPane fx:id="anchorPaneConsumers" prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView fitHeight="807.0" fitWidth="1362.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/consumers/background.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="853.0" layoutY="296.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/consumers/redCar.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="807.0" fitWidth="1362.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/consumers/background2.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgConsumerToManagment" fitHeight="110.0" fitWidth="110.0" layoutX="1069.0" layoutY="576.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/managment.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
       <ImageView fitHeight="81.0" fitWidth="467.0" layoutX="14.0" layoutY="615.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/desk/moneyText.png" />
          </image>
       </ImageView>
       <Label fx:id="textLabelMoney" alignment="CENTER_RIGHT" layoutX="60.0" layoutY="619.0" prefHeight="62.0" prefWidth="421.0" text="POBRE" textAlignment="RIGHT" textFill="#2aff00">
+         <font>
+            <Font size="34.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="526.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/oil.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="textLabelMoney1" alignment="CENTER_RIGHT" layoutX="60.0" layoutY="536.0" prefHeight="53.0" prefWidth="143.0" text="0L" textAlignment="RIGHT">
          <font>
             <Font size="34.0" />
          </font>
