--- a/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
+++ b/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <AnchorPane fx:id="anchorPaneManagement" layoutX="361.0" layoutY="150.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: WHITE;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="anchorPaneManagement" layoutX="361.0" layoutY="150.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: WHITE;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fitHeight="700.0" fitWidth="1726.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -69,28 +69,28 @@
                   <Image url="@../img/managment.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="62.0" fitWidth="32.0" layoutX="202.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefineryTurnOn1" fitHeight="62.0" fitWidth="32.0" layoutX="202.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="62.0" fitWidth="32.0" layoutX="467.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefineryTurnOn2" fitHeight="62.0" fitWidth="32.0" layoutX="467.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="62.0" fitWidth="32.0" layoutX="758.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefineryTurnOn3" fitHeight="62.0" fitWidth="32.0" layoutX="758.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="62.0" fitWidth="32.0" layoutX="1053.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefineryTurnOn4" fitHeight="62.0" fitWidth="32.0" layoutX="1053.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
          </children></AnchorPane>
-      <AnchorPane fx:id="anchorPaneConsumers" prefHeight="700.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="anchorPaneConsumers" prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fitHeight="807.0" fitWidth="1362.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -122,17 +122,17 @@
                   <Image url="@../img/managment.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="62.0" fitWidth="32.0" layoutX="653.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgGasTurnOn1" fitHeight="62.0" fitWidth="32.0" layoutX="653.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="62.0" fitWidth="32.0" layoutX="791.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgGasTurnOn2" fitHeight="62.0" fitWidth="32.0" layoutX="791.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="62.0" fitWidth="32.0" layoutX="921.0" layoutY="298.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgGasTurnOn3" fitHeight="62.0" fitWidth="32.0" layoutX="921.0" layoutY="298.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
