--- a/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
+++ b/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
@@ -89,6 +89,86 @@
                   <Image url="@../img/powerOff.png" />
                </image>
             </ImageView>
+            <ImageView fx:id="imgLoadingBar1" fitHeight="32.0" fitWidth="134.0" layoutX="143.0" layoutY="217.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/producers/loadingBar.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar11" fitHeight="17.0" fitWidth="57.0" layoutX="152.0" layoutY="224.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar12" fitHeight="17.0" fitWidth="39.0" layoutX="194.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar13" fitHeight="17.0" fitWidth="41.0" layoutX="234.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgLoadingBar2" fitHeight="32.0" fitWidth="134.0" layoutX="416.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/producers/loadingBar.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar21" fitHeight="17.0" fitWidth="57.0" layoutX="425.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar22" fitHeight="17.0" fitWidth="39.0" layoutX="467.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar23" fitHeight="17.0" fitWidth="41.0" layoutX="507.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgLoadingBar3" fitHeight="32.0" fitWidth="134.0" layoutX="707.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/producers/loadingBar.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar31" fitHeight="17.0" fitWidth="57.0" layoutX="716.0" layoutY="346.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar32" fitHeight="17.0" fitWidth="39.0" layoutX="758.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar33" fitHeight="17.0" fitWidth="41.0" layoutX="798.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgLoadingBar4" fitHeight="32.0" fitWidth="134.0" layoutX="1003.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/producers/loadingBar.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar41" fitHeight="17.0" fitWidth="57.0" layoutX="1012.0" layoutY="280.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar42" fitHeight="17.0" fitWidth="39.0" layoutX="1054.0" layoutY="279.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgProgressBar43" fitHeight="17.0" fitWidth="41.0" layoutX="1094.0" layoutY="279.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../img/producers/loadingPing.png" />
+               </image>
+            </ImageView>
          </children></AnchorPane>
       <AnchorPane fx:id="anchorPaneConsumers" prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
