--- a/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
+++ b/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <AnchorPane fx:id="anchorPaneManagement" layoutX="361.0" layoutY="150.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: WHITE;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="anchorPaneManagement" layoutX="361.0" layoutY="150.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: WHITE;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fitHeight="700.0" fitWidth="1726.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -69,7 +70,7 @@
                   <Image url="@../img/managment.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgRefineryTurnOn1" fitHeight="62.0" fitWidth="32.0" layoutX="202.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgRefineryTurnOn1" fitHeight="62.0" fitWidth="32.0" layoutX="194.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/powerOff.png" />
                </image>
@@ -169,6 +170,18 @@
                   <Image url="@../img/producers/loadingPing.png" />
                </image>
             </ImageView>
+            <Button fx:id="buttonSpd11" layoutX="143.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" />
+            <Button fx:id="buttonSpd12" layoutX="194.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" />
+            <Button fx:id="buttonSpd13" layoutX="245.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" />
+            <Button fx:id="buttonSpd21" layoutX="416.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" />
+            <Button fx:id="buttonSpd22" layoutX="467.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" />
+            <Button fx:id="buttonSpd23" layoutX="518.0" layoutY="132.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" />
+            <Button fx:id="buttonSpd31" layoutX="707.0" layoutY="259.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" />
+            <Button fx:id="buttonSpd32" layoutX="758.0" layoutY="259.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" />
+            <Button fx:id="buttonSpd33" layoutX="809.0" layoutY="259.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" />
+            <Button fx:id="buttonSpd41" layoutX="1003.0" layoutY="192.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="1" />
+            <Button fx:id="buttonSpd42" layoutX="1054.0" layoutY="192.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="2" />
+            <Button fx:id="buttonSpd43" layoutX="1105.0" layoutY="194.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="32.0" style="-fx-background-color: #ffffff; -fx-border-color: black; -fx-background-radius: 10; -fx-border-radius: 10;" text="3" />
          </children></AnchorPane>
       <AnchorPane fx:id="anchorPaneConsumers" prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -215,6 +228,60 @@
             <ImageView fx:id="imgGasTurnOn3" fitHeight="62.0" fitWidth="32.0" layoutX="921.0" layoutY="298.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/powerOff.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="anchorPaneShop" prefHeight="700.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView fitHeight="763.0" fitWidth="1530.0" layoutX="-208.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/shop/background.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgShopToManager" fitHeight="110.0" fitWidth="110.0" layoutX="1069.0" layoutY="576.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/managment.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="215.0" fitWidth="559.0" layoutX="495.0" layoutY="473.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/shop/textBox.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="labelShopText" alignment="TOP_LEFT" contentDisplay="RIGHT" layoutX="507.0" layoutY="479.0" prefHeight="199.0" prefWidth="533.0" wrapText="true">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <ImageView fx:id="imgGas" fitHeight="150.0" fitWidth="200.0" layoutX="52.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/shop/gas.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgOil" fitHeight="150.0" fitWidth="200.0" layoutX="256.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/shop/oil.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgWin" fitHeight="150.0" fitWidth="200.0" layoutX="1029.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/shop/trophy.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgRefinery" fitHeight="150.0" fitWidth="200.0" layoutX="52.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/shop/refinery.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgWheel" fitHeight="150.0" fitWidth="200.0" layoutX="256.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/shop/wheel.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="imgShopConfirm" fitHeight="150.0" fitWidth="200.0" layoutX="854.0" layoutY="383.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/shop/confirma.png" />
                </image>
             </ImageView>
          </children>
