--- a/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
+++ b/04_Problema_do_Produtor_Consumidor/view/main_view.fxml
@@ -316,7 +316,7 @@
             <Font size="34.0" />
          </font>
       </Label>
-      <AnchorPane prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="anchorPaneWin" prefHeight="700.0" prefWidth="1200.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fitHeight="778.0" fitWidth="1409.0" layoutX="-154.0" pickOnBounds="true" preserveRatio="true">
                <image>
