--- a/06_Leitores_e_Escritores/view/main_view.fxml
+++ b/06_Leitores_e_Escritores/view/main_view.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
@@ -53,8 +55,14 @@
       <Label layoutX="928.0" layoutY="175.0" prefHeight="22.0" prefWidth="200.0" text="Leitor 1" />
       <Label layoutX="928.0" layoutY="383.0" prefHeight="22.0" prefWidth="200.0" text="Leitor 2" />
       <Label layoutX="928.0" layoutY="588.0" prefHeight="22.0" prefWidth="200.0" text="Leitor 3" />
-      <Label layoutX="579.0" layoutY="481.0" prefHeight="22.0" prefWidth="109.0" text="Servidor" />
-      <Label fx:id="serverStatus" layoutX="547.0" layoutY="513.0" prefHeight="84.0" prefWidth="186.0" text="So sei que nada assei" textAlignment="CENTER" />
+      <Label layoutX="547.0" layoutY="476.0" prefHeight="45.0" prefWidth="141.0" text="Servidor">
+         <font>
+            <Font name="System Bold" size="28.0" />
+         </font></Label>
+      <Label fx:id="serverStatus" layoutX="515.0" layoutY="499.0" prefHeight="109.0" prefWidth="240.0" text="So sei que nada assei" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font></Label>
       <Label layoutX="69.0" layoutY="208.0" prefHeight="22.0" prefWidth="39.0" text="Status:" />
       <Label fx:id="escritor1Status" layoutX="108.0" layoutY="208.0" prefHeight="22.0" prefWidth="141.0" text="AFK" />
       <Label layoutX="69.0" layoutY="438.0" prefHeight="22.0" prefWidth="39.0" text="Status:" />
@@ -67,5 +75,51 @@
       <Label fx:id="leitor1Status" layoutX="967.0" layoutY="197.0" prefHeight="22.0" prefWidth="141.0" text="AFK" />
       <Label fx:id="leitor2Status" layoutX="967.0" layoutY="405.0" prefHeight="22.0" prefWidth="141.0" text="AFK" />
       <Label fx:id="leitor3Status" layoutX="967.0" layoutY="609.0" prefHeight="22.0" prefWidth="141.0" text="AFK" />
+      <Label layoutX="366.0" layoutY="25.0" prefHeight="29.0" prefWidth="81.0" text="Escritor 1">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="548.0" layoutY="25.0" prefHeight="29.0" prefWidth="75.0" text="Escritor 2">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="715.0" layoutY="25.0" prefHeight="29.0" prefWidth="81.0" text="Escritor 3">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Slider fx:id="escritor1Slider" layoutX="337.0" layoutY="57.0" max="10000.0" min="500.0" rotate="179.0" value="1000.0" />
+      <Slider fx:id="escritor2Slider" layoutX="516.0" layoutY="57.0" max="10000.0" min="500.0" rotate="179.0" value="1000.0" />
+      <Slider fx:id="escritor3Slider" layoutX="686.0" layoutY="57.0" max="10000.0" min="500.0" rotate="179.0" value="1000.0" />
+      <Label layoutX="326.0" layoutY="606.0" prefHeight="29.0" prefWidth="81.0" text="Leitor 1">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="537.0" layoutY="606.0" prefHeight="29.0" prefWidth="81.0" text="Leitor 2">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="745.0" layoutY="605.0" prefHeight="29.0" prefWidth="81.0" text="Leitor 3">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Slider fx:id="leitor1Slider" layoutX="276.0" layoutY="638.0" max="10000.0" min="500.0" rotate="179.0" value="1000.0" />
+      <Slider fx:id="leitor2Slider" layoutX="495.0" layoutY="638.0" max="10000.0" min="500.0" rotate="179.0" value="1000.0" />
+      <Slider fx:id="leitor3Slider" layoutX="704.0" layoutY="638.0" max="10000.0" min="500.0" rotate="179.0" value="1000.0" />
+      <Label layoutX="326.0" layoutY="153.0" prefHeight="109.0" prefWidth="115.0" text="Fato assustador: propositalmente eu deixei os sliders tortos em 1 grau" wrapText="true">
+         <font>
+            <Font name="System Italic" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="731.0" layoutY="136.0" prefHeight="77.0" prefWidth="141.0" text="Pra direita: Rapidao         Pra esquerda: lentao" wrapText="true">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
